--- a/.github/workflows/compile-base-release.yml
+++ b/.github/workflows/compile-base-release.yml
@@ -17,18 +17,26 @@ jobs:
         - name: Build project
           run: |
             uname -a
-            find ./
             cp -r CrossC2Kit/third-party /tmp/third-party
             cp release.sh /tmp/
             cp CrossC2Kit/compile.sh /tmp/
             cd /tmp
             chmod 755 compile.sh
             chmod 755 release.sh
-            ./compile.sh
-            find /tmp/third-party/
-            ./release.sh
+            ./compile.sh > /tmp/elog
+            find /tmp/third-party/ >> /tmp/elog
+            ./release.sh >> /tmp/elog
             echo 1 > /tmp/blank
             cd /tmp/
+        - name: Build project
+          run: |
+            echo "# Arch"  >> $GITHUB_STEP_SUMMARY
+            uname -a >> $GITHUB_STEP_SUMMARY
+            echo "# Build Result" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`python" >> $GITHUB_STEP_SUMMARY
+            cat /tmp/elog >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
         - name: Gets latest created release info
           id: latest_release_info
           uses: jossef/action-latest-release-info@v1.1.0
@@ -82,11 +90,20 @@ jobs:
             cd /tmp
             chmod 755 compile.sh
             chmod 755 release.sh
-            ./compile.sh
-            find /tmp/third-party/
-            ./release.sh
+            ./compile.sh > /tmp/elog
+            find /tmp/third-party/ >> /tmp/elog
+            ./release.sh >> /tmp/elog
             echo 1 > /tmp/blank
             cd /tmp/
+        - name: Build project
+          run: |
+            echo "# Arch"  >> $GITHUB_STEP_SUMMARY
+            uname -a >> $GITHUB_STEP_SUMMARY
+            echo "# Build Result" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`python" >> $GITHUB_STEP_SUMMARY
+            cat /tmp/elog >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
         - name: Gets latest created release info
           id: latest_release_info2
           uses: jossef/action-latest-release-info@v1.1.0
@@ -133,8 +150,8 @@ jobs:
           id: download_release_asset
           uses: i3h/download-release-asset@v1
           with:
-            owner: jacknnookac
-            repo: t2
+            owner: gloxec
+            repo: CrossC2
             tag: latest
             file: /bot-third-linux-.*zip/
             path: /tmp/
@@ -142,8 +159,8 @@ jobs:
           id: download_release_asset2
           uses: i3h/download-release-asset@v1
           with:
-            owner: jacknnookac
-            repo: t2
+            owner: gloxec
+            repo: CrossC2
             tag: latest
             file: /bot-third-mac-.*zip/
             path: /tmp/
@@ -163,9 +180,16 @@ jobs:
             rm -rf third-mac.zip
             rm -rf third-linux.zip
             cd /tmp/
-            zip -r CrossC2Kit-${{ steps.date3.outputs.date }} CrossC2Kit
+            zip -r CrossC2Kit-${{ steps.date3.outputs.date }} CrossC2Kit > /tmp/elog
             echo 1 > /tmp/blank
             cd /tmp/
+        - name: Build project
+          run: |
+            echo "# Build Files"  >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`python" >> $GITHUB_STEP_SUMMARY
+            cat /tmp/elog >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
         - name: Gets latest created release info
           id: latest_release_info3
           uses: jossef/action-latest-release-info@v1.1.0
